Bug 908144 - Don't output sound before start() is called when using OscilatorNode. r=ehsan a=webaudio